deploy: ed9961850bef8750aba6422e1f622e45b15d9c92

--- a/rhoso-intro/1/index.html
+++ b/rhoso-intro/1/index.html
@@ -55,6 +55,12 @@
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="ch1-intro/s2-components-quiz.html">Components of Red Hat OpenStack</a>
   </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="ch1-intro/s2-components-quiz-answers.html">Answers to: Components of Red Hat OpenStack</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="ch1-intro/s3-operations-lecture.html">OpenStack Operations and Administration Roles</a>
+  </li>
 </ul>
   </li>
 </ul>
