--- a/rhoso-intro/1/ch1-intro/section3.html
+++ b/rhoso-intro/1/ch1-intro/section3.html
@@ -52,13 +52,29 @@
     <a class="nav-link" href="s1-rhoso-lecture.html">What is Red Hat OpenStack Services on OpenShift</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="s2-components-quiz.html">Components of Red Hat OpenStack</a>
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="s2-components-quiz.html">Quiz: Components of Red Hat OpenStack on OpenShift</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="s2-components-quiz-answers.html">Answers to the Quiz</a>
   </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="s2-components-quiz-answers.html">Answers to: Components of Red Hat OpenStack</a>
+</ul>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="s3-operations-lecture.html">OpenStack Operations and Administration Roles</a>
+  </li>
+</ul>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
+  <li class="nav-item" data-depth="1">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="../ch2-services/index.html">Red Hat OpenStack Services</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="../ch2-services/s1-fundamental-lecture.html">Fundamental Services of Red Hat OpenStack</a>
   </li>
 </ul>
   </li>
