--- a/rhoso-intro/1/index.html
+++ b/rhoso-intro/1/index.html
@@ -53,13 +53,29 @@
     <a class="nav-link" href="ch1-intro/s1-rhoso-lecture.html">What is Red Hat OpenStack Services on OpenShift</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="ch1-intro/s2-components-quiz.html">Components of Red Hat OpenStack</a>
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="ch1-intro/s2-components-quiz.html">Quiz: Components of Red Hat OpenStack on OpenShift</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="ch1-intro/s2-components-quiz-answers.html">Answers to the Quiz</a>
   </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="ch1-intro/s2-components-quiz-answers.html">Answers to: Components of Red Hat OpenStack</a>
+</ul>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="ch1-intro/s3-operations-lecture.html">OpenStack Operations and Administration Roles</a>
+  </li>
+</ul>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
+  <li class="nav-item" data-depth="1">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="ch2-services/index.html">Red Hat OpenStack Services</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="ch2-services/s1-fundamental-lecture.html">Fundamental Services of Red Hat OpenStack</a>
   </li>
 </ul>
   </li>
@@ -111,7 +127,7 @@
 <p>This is the first course for <strong>IT professionals</strong> who are new to Red Hat OpenStack Services on OpenShift. It requires no previous experience with OpenStack, but it requires some familiarity with Linux system administration and virtual machine management.</p>
 </div>
 <div class="paragraph">
-<p>This course is also useful for learners with previous experience with OpenStack, providing them with a high-level understanding of what&#8217;s included in the Red Hat product and how it might be different than other OpenStack distributions; and to get a quick overview of how Red Hat OpenStack Services on OpenShift differs from previous incarnations of the Red Hat OpenStack platform.</p>
+<p>This course is also useful for learners with previous experience with OpenStack, providing  a high-level understanding of what&#8217;s included in the Red Hat product and how it might be different than other OpenStack distributions; and a quick overview of how Red Hat OpenStack Services on OpenShift differs from previous incarnations of the Red Hat OpenStack platform.</p>
 </div>
 </div>
 </div>
