deploy: ee843b913a2e08e879cff4df7ac198fcfcb13b82

--- a/rhoso-intro/1/index.html
+++ b/rhoso-intro/1/index.html
@@ -121,7 +121,7 @@
 <article class="doc">
 <h1 class="page">About This Course</h1>
 <div class="sect1">
-<h2 id="_introduction"><a class="anchor" href="#_introduction"></a>Introduction</h2>
+<h2 id="_introduction_to_openstack_services_on_openshift"><a class="anchor" href="#_introduction_to_openstack_services_on_openshift"></a>Introduction to OpenStack Services on OpenShift</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>This is the first course for <strong>IT professionals</strong> who are new to Red Hat OpenStack Services on OpenShift. It requires no previous experience with OpenStack, but it requires some familiarity with Linux system administration and virtual machine management.</p>
