--- a/rhoso-intro/1/ch1-intro/s2-components-quiz.html
+++ b/rhoso-intro/1/ch1-intro/s2-components-quiz.html
@@ -65,6 +65,15 @@
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="s3-operations-lecture.html">OpenStack Operations and Administration Roles</a>
   </li>
+  <li class="nav-item" data-depth="2">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="s4-tasks-quiz.html">Quiz: Red Hat OpenStack Operations Tasks</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="s4-tasks-quiz-answers.html">Answers to the Quiz</a>
+  </li>
+</ul>
+  </li>
 </ul>
   </li>
 </ul>
