deploy: fb954851aeae519c3e2a6dd54873a5e3844e42f3

--- a/rhoso-intro/1/ch1-intro/index.html
+++ b/rhoso-intro/1/ch1-intro/index.html
@@ -131,17 +131,10 @@
 <article class="doc">
 <h1 class="page">Introduction to Red Hat OpenStack</h1>
 <div class="sect1">
-<h2 id="_objectives"><a class="anchor" href="#_objectives"></a>Objectives</h2>
+<h2 id="_objective"><a class="anchor" href="#_objective"></a>Objective</h2>
 <div class="sectionbody">
-<div class="ulist">
-<ul>
-<li>
-<p>Describe the Red Hat OpenStack products and how they relate to other Red Hat products, partner products, and upstream.</p>
-</li>
-<li>
-<p>Describe the role and typical tasks performed by Red Hat OpenStack Operations personnel, and how they interact with other IT roles.</p>
-</li>
-</ul>
+<div class="paragraph">
+<p>Describe the Red Hat OpenStack products and how they relate to other Red Hat products, partner products, upstream projects, and IT professional roles.</p>
 </div>
 </div>
 </div>
