--- a/rhoso-intro/1/ch1-intro/s4-tasks-quiz.html
+++ b/rhoso-intro/1/ch1-intro/s4-tasks-quiz.html
@@ -137,7 +137,7 @@
 <p><strong>Objective:</strong></p>
 </div>
 <div class="paragraph">
-<p>Assess the learner&#8217;s understanding of the scope of OpenStack operations with Red Hat OpenStack on OpenShift.</p>
+<p>Relate tasks to OpenStack administrators, operators, and other IT roles.</p>
 </div>
 </div>
 </div>
